<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/purple"
    tools:context="com.example.kevin.catamountcharacters.Image">

    <TextView
        android:text="@string/choose_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/img_title"
        android:textStyle="bold"
        android:textSize="20dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/img_title"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:weightSum="15">

        <Button
            style="@style/button"
            android:background="@drawable/mybutton"
            android:layout_width="@dimen/button_width"
            android:text="@string/img_btn1"
            android:layout_weight="3"
            android:layout_gravity="center_horizontal"
            android:onClick="cat_btn" />
        <Button
            style="@style/button"
            android:background="@drawable/mybutton"
            android:layout_width="@dimen/button_width"
            android:text="@string/img_btn2"
            android:layout_weight="3"
            android:layout_gravity="center_horizontal"
            android:onClick="tower_btn" />
        <Button
            style="@style/button"
            android:background="@drawable/mybutton"
            android:layout_width="@dimen/button_width"
            android:text="@string/img_btn3"
            android:layout_weight="3"
            android:layout_gravity="center_horizontal"
            android:onClick="comp_btn" />
        <Button
            style="@style/button"
            android:background="@drawable/mybutton"
            android:layout_width="@dimen/button_width"
            android:text="@string/img_btn4"
            android:layout_weight="3"
            android:layout_gravity="center_horizontal"
            android:onClick="science_btn" />
        <Button
            style="@style/button"
            android:background="@drawable/mybutton"
            android:layout_width="@dimen/button_width"
            android:text="@string/img_btn5"
            android:layout_weight="3"
            android:layout_gravity="center_horizontal"
            android:onClick="cs_btn" />
    </LinearLayout>

</RelativeLayout>
