<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/purple"
    tools:context="com.example.kevin.catamountcharacters.MainMenu">


    <TextView android:text="@string/app_name" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/yellow"
        android:textSize="30dp"
        android:id="@+id/main_menu_title" />

    <TextView android:text="@string/main_menu" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="63dp"
        android:textColor="@color/blue"
        android:textSize="20dp"
        android:layout_below="@+id/main_menu_title"
        android:layout_centerHorizontal="true"
        android:id="@+id/main_menu_subtitle"
        android:textStyle="bold" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/main_menu_subtitle"
        android:layout_centerHorizontal="true"
        android:weightSum="12">

        <Button
            style="@style/button"
            android:background="@drawable/mybutton"
            android:text="@string/b1_text"
            android:layout_width="@dimen/button_width"
            android:layout_weight="3"
            android:id="@+id/button1"
            android:onClick="oneLetter"
            android:layout_gravity="center_horizontal" />

        <Button
            style="@style/button"
            android:background="@drawable/mybutton"
            android:text="@string/b2_text"
            android:layout_width="@dimen/button_width"
            android:layout_weight="3"
            android:id="@+id/button2"
            android:onClick="twoLetter"
            android:layout_gravity="center_horizontal" />

        <Button
            style="@style/button"
            android:background="@drawable/mybutton"
            android:text="@string/b3_text"
            android:layout_width="@dimen/button_width"
            android:layout_weight="3"
            android:id="@+id/button3"
            android:onClick="image"
            android:layout_gravity="center_horizontal" />

        <Button
            style="@style/button"
            android:background="@drawable/mybutton"
            android:text="@string/b4_text"
            android:layout_width="@dimen/button_width"
            android:layout_weight="3"
            android:id="@+id/button4"
            android:onClick="information"
            android:layout_gravity="center_horizontal" />
        </LinearLayout>

</RelativeLayout>
