<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/purple"
    tools:context="com.example.kevin.catamountcharacters.SingleChar">

    <TextView
        android:text="@string/choose_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chooseText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="66dp"
        android:textStyle="bold" />
    <TextView
        android:text="@string/enter_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/chooseText"
        android:layout_centerHorizontal="true"
        android:id="@+id/enterText" />
    <TextView
        android:text="@string/type_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:textStyle="bold"
        android:id="@+id/textView"
        android:layout_below="@+id/enterText"
        android:layout_alignLeft="@+id/getSingleCharText"
        android:layout_alignStart="@+id/getSingleCharText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/getSingleCharText"
        android:width="250dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:visibility="visible"
        android:selectAllOnFocus="false"
        android:background="@color/white" />

    <Button
        style="@style/button"
        android:background="@drawable/mybutton"
        android:layout_width="wrap_content"
        android:text="@string/go_button"
        android:id="@+id/go_button"
        android:layout_below="@+id/getSingleCharText"
        android:layout_centerHorizontal="true"
        android:layout_margin="75dp"/>

</RelativeLayout>
